Use textual texture references for generation